--- a/test/test.html
+++ b/test/test.html
@@ -4,16 +4,16 @@
   // window.Promise = null
 </script>
 <script src="../../es6-module-loader/lib/es6-module-loader.js" type="text/javascript"></script>
-<script src="../dist/system-jspm.js" type="text/javascript"></script>
-<!-- <script src="../dist/system-jspm.min.js" type="text/javascript"></script> -->
+<!-- <script src="../dist/system.js" type="text/javascript"></script> -->
+<script src="../dist/system.min.js" type="text/javascript"></script>
 
 <script>
-  System.import('~/test-runner').then(function(runner) {
+  System.import('test-runner').then(function(runner) {
     runner.execute([
       {
         name: 'Wrapper module support',
         run: function(complete, err) {
-          System.import('~/tests/wrapper').then(complete, err);
+          System.import('tests/wrapper').then(complete, err);
         },
         confirm: function(m) {
           if (m.default != 'default1')
@@ -28,34 +28,34 @@
             if (m1 && m2 && m3 && m4 && err)
               complete(m1, m2, m3, m4);
           }
-          System.import('~/tests/default1').then(function(_m1) {
+          System.import('tests/default1').then(function(_m1) {
             if (m1 === undefined)
               m1 = null;
             else
               m1 = _m1;
             checkComplete();
           });
-          System.import('~/tests/default1').then(function(_m1) {
+          System.import('tests/default1').then(function(_m1) {
             if (m1 === undefined)
               m1 = null;
             else
               m1 = _m1;
             checkComplete();
           });
-          System.import('~/tests/default2').then(function(_m2) {
+          System.import('tests/default2').then(function(_m2) {
             m2 = _m2;
             checkComplete();
           });
-          System.import('~/tests/asdf').then(function() {
+          System.import('tests/asdf').then(function() {
           }, function(_err) {
             err = _err;
             checkComplete();
           });
-          System.import('~/tests/default3').then(function(_m3) {
+          System.import('tests/default3').then(function(_m3) {
             m3 = _m3;
             checkComplete();
           });
-          System.import('~/tests/module').then(function(_m4) {
+          System.import('tests/module').then(function(_m4) {
             m4 = _m4;
             checkComplete();
           });
@@ -74,7 +74,7 @@
       {
         name: 'Error handling',
         run: function(complete, err) {
-          System.import('~/tests/error').then(complete, err);
+          System.import('tests/error').then(complete, err);
         },
         confirm: function() {
           return;
@@ -83,7 +83,7 @@
       {
         name: 'Global script loading',
         run: function(complete, err) {
-          System.import('~/tests/global').then(complete, err);
+          System.import('tests/global').then(complete, err);
         },
         confirm: function(m) {
           if (!m.jQuery || !m.another)
@@ -93,7 +93,7 @@
       {
         name: 'Global script with multiple objects the same',
         run: function(complete, err) {
-          System.import('~/tests/global-multi').then(complete, err);
+          System.import('tests/global-multi').then(complete, err);
         },
         confirm: function(m) {
           if (m.jquery != 'here')
@@ -103,7 +103,7 @@
       {
         name: 'Global script loading with inline shim',
         run: function(complete, err) {
-          System.import('~/tests/global-inline-dep').then(complete, err);
+          System.import('tests/global-inline-dep').then(complete, err);
         },
         confirm: function(m) {
           if (m != '1.8.3')
@@ -113,7 +113,7 @@
       {
         name: 'Global script with inline exports',
         run: function(complete, err) {
-          System.import('~/tests/global-inline-export').then(complete, err);
+          System.import('tests/global-inline-export').then(complete, err);
         },
         confirm: function(m) {
           if (m != 'r')
@@ -123,8 +123,8 @@
       {
         name: 'Global script with shim config',
         run: function(complete, err) {
-          System.shim['~/tests/global-shim-config'] = ['./global-shim-config-dep'];
-          System.import('~/tests/global-shim-config').then(complete, err);
+          System.shim['tests/global-shim-config'] = ['./global-shim-config-dep'];
+          System.import('tests/global-shim-config').then(complete, err);
         },
         confirm: function(m) {
           if (m != 'shimmed')
@@ -134,8 +134,8 @@
       {
         name: 'Global script with shim config exports',
         run: function(complete, err) {
-          System.shim['~/tests/global-shim-config-exports'] = { exports: 'p' };
-          System.import('~/tests/global-shim-config-exports').then(complete, err);
+          System.shim['tests/global-shim-config-exports'] = { exports: 'p' };
+          System.import('tests/global-shim-config-exports').then(complete, err);
         },
         confirm: function(m) {
           if (m != 'export')
@@ -145,9 +145,9 @@
       {
         name: 'Map configuration',
         run: function(complete, err) {
-          System.map['maptest'] = '~/tests/map-test';
-          System.map['~/tests/contextual-map'] = {
-            maptest: '~/tests/contextual-map-dep'
+          System.map['maptest'] = 'tests/map-test';
+          System.map['tests/contextual-map'] = {
+            maptest: 'tests/contextual-map-dep'
           };
           System.import('maptest').then(complete, err)
         },
@@ -169,7 +169,7 @@
       {
         name: 'Contextual map configuration',
         run: function(complete, err) {
-          System.import('~/tests/contextual-map').then(complete, err);
+          System.import('tests/contextual-map').then(complete, err);
         },
         confirm: function(m) {
           if (m.mapdep != 'mapdep')
@@ -179,7 +179,7 @@
       {
         name: 'Loading an AMD module',
         run: function(complete, err) {
-          System.import('~/tests/amd-module').then(complete, err);
+          System.import('tests/amd-module').then(complete, err);
         },
         confirm: function(m) {
           if (m.amd != true)
@@ -191,7 +191,7 @@
       {
         name: 'Loading an AMD named define',
         run: function(complete, err) {
-          System.import('~/tests/nameddefine').then(complete, err);
+          System.import('tests/nameddefine').then(complete, err);
         },
         confirm: function(m) {
           if (!m.converter)
@@ -201,7 +201,7 @@
       {
         name: 'Loading AMD CommonJS form',
         run: function(complete, err) {
-          System.import('~/tests/amd-cjs-module').then(complete, err);
+          System.import('tests/amd-cjs-module').then(complete, err);
         },
         confirm: function(m) {
           if (m.test != 'hi')
@@ -211,7 +211,7 @@
       {
         name: 'Loading a CommonJS module',
         run: function(complete, err) {
-          System.import('~/tests/common-js-module').then(complete, err);
+          System.import('tests/common-js-module').then(complete, err);
         },
         confirm: function(m) {
           if (m.hello != 'world')
@@ -223,7 +223,7 @@
       {
         name: 'Loading a UMD module',
         run: function(complete, err) {
-          System.import('~/tests/umd').then(complete, err);
+          System.import('tests/umd').then(complete, err);
         },
         confirm: function(m) {
           if (m.d != 'hi')
@@ -233,7 +233,7 @@
       {
         name: 'Loading ES6 with format hint',
         run: function(complete, err) {
-          System.import('~/tests/es6-format').then(complete, err);
+          System.import('tests/es6-format').then(complete, err);
         },
         confirm: function(m) {
         }
@@ -241,7 +241,7 @@
       {
         name: 'Loading AMD with format hint',
         run: function(complete, err) {
-          System.import('~/tests/amd-format').then(complete, err);
+          System.import('tests/amd-format').then(complete, err);
         },
         confirm: function(m) {
           if (m.amd != 'amd')
@@ -251,7 +251,7 @@
       {
         name: 'Loading CJS with format hint',
         run: function(complete, err) {
-          System.import('~/tests/cjs-format').then(complete, err);
+          System.import('tests/cjs-format').then(complete, err);
         },
         confirm: function(m) {
           if (m.cjs != 'cjs')
@@ -261,17 +261,17 @@
       {
         name: 'Module Name meta',
         run: function(complete, err) {
-          System.import('~/tests/reflection').then(complete, err);
+          System.import('tests/reflection').then(complete, err);
         },
         confirm: function(m) {
-          if (m.myname != '~/tests/reflection')
+          if (m.myname != 'tests/reflection')
             return 'Module name not returned';
         }
       },
       {
         name: 'Relative dyanamic loading',
         run: function(complete, err) {
-          System.import('~/tests/reldynamic').then(function(m) {
+          System.import('tests/reldynamic').then(function(m) {
             m.dynamicLoad().then(complete, err);
           }, err);
         },
@@ -283,8 +283,8 @@
       {
         name: 'Versions support',
         run: function(complete, err) {
-          System.versions['~/tests/versioned'] = '2.0.3';
-          System.import('~/tests/versioned@^2.0.3').then(complete, err);
+          System.versions['tests/versioned'] = '2.0.3';
+          System.import('tests/versioned@^2.0.3').then(complete, err);
         },
         confirm: function(m) {
           if (m.version != '2.3.4')
@@ -294,8 +294,8 @@
       {
         name: 'Simple compiler Plugin',
         run: function(complete, err) {
-          System.map['coffee'] = '~/tests/compiler-plugin';
-          System.import('~/tests/compiler-test.coffee!').then(complete, err);
+          System.map['coffee'] = 'tests/compiler-plugin';
+          System.import('tests/compiler-test.coffee!').then(complete, err);
         },
         confirm: function(m) {
           if (m.output != 'plugin output')
@@ -307,7 +307,7 @@
       {
         name: 'Legacy plugin',
         run: function(complete, err) {
-          System.import('~/tests/default1.js!~/tests/legacy-plugin').then(complete, err);
+          System.import('tests/default1.js!tests/legacy-plugin').then(complete, err);
         },
         confirm: function(m) {
           if (!m.default)
@@ -319,16 +319,17 @@
       {
         name: 'Advanced compiler plugin',
         run: function(complete, err) {
-          System.import('~/tests/compiler-test!~/tests/advanced-plugin').then(complete, err);
+          System.import('tests/compiler-test!tests/advanced-plugin').then(complete, err);
         },
         confirm: function(m) {
-          if (m != 'custom fetch:~/tests/compiler-test!~/tests/advanced-plugin')
+          if (m != 'custom fetch:tests/compiler-test!tests/advanced-plugin')
             return m;
         }
       },
       {
         name: 'Loading from jspm',
         run: function(complete, err) {
+          System.paths['npm:*'] = 'https://npm.jspm.io/*.js';
           System.import('npm:underscore').then(complete);
         },
         confirm: function(m) {
