--- a/test/test.html
+++ b/test/test.html
@@ -4,8 +4,8 @@
   // window.Promise = null
 </script>
 <script src="../../es6-module-loader/lib/es6-module-loader.js" type="text/javascript"></script>
-<!-- <script src="../dist/system.js" type="text/javascript"></script> -->
-<script src="../dist/system.min.js" type="text/javascript"></script>
+<script src="../dist/system.js" type="text/javascript"></script>
+<!-- <script src="../dist/system.min.js" type="text/javascript"></script> -->
 
 <script>
   System.import('test-runner').then(function(runner) {
