--- a/test/test.html
+++ b/test/test.html
@@ -3,8 +3,8 @@
 <script>
   // window.Promise = null
 </script>
-<script src="../../es6-module-loader/lib/es6-module-loader.js" type="text/javascript"></script>
-<script src="../dist/system.js" type="text/javascript"></script>
+<script src="../../es6-module-loader/tmp/es6-module-loader.js" type="text/javascript"></script>
+<script src="../dist/system.js" data-traceur-src="../../es6-module-loader/lib/traceur.js" type="text/javascript"></script>
 <!-- <script src="../dist/system.min.js" type="text/javascript"></script> -->
 
 <script>
