optimistic ie8 preparation

--- a/test/test.html
+++ b/test/test.html
@@ -4,19 +4,19 @@
   // window.Promise = null
 </script>
 <script src="../../es6-module-loader/tmp/es6-module-loader.js" type="text/javascript"></script>
-<script src="../dist/system.js" data-traceur-src="../../es6-module-loader/lib/traceur.js" type="text/javascript"></script>
+<script src="../dist/system.js" data-traceur-src="../../traceur-compiler/bin/traceur.js" type="text/javascript"></script>
 <!-- <script src="../dist/system.min.js" type="text/javascript"></script> -->
 
 <script>
-  System.import('test-runner').then(function(runner) {
+  System['import']('test-runner').then(function(runner) {
     runner.execute([
       {
         name: 'Wrapper module support',
         run: function(complete, err) {
-          System.import('tests/wrapper').then(complete, err);
+          System['import']('tests/wrapper').then(complete, err);
         },
         confirm: function(m) {
-          if (m.default != 'default1')
+          if (m['default'] != 'default1')
             return 'Wrapper module not defined.';
         }
       },
@@ -28,44 +28,44 @@
             if (m1 && m2 && m3 && m4 && err)
               complete(m1, m2, m3, m4);
           }
-          System.import('tests/default1').then(function(_m1) {
+          System['import']('tests/default1').then(function(_m1) {
             if (m1 === undefined)
               m1 = null;
             else
               m1 = _m1;
             checkComplete();
-          });
-          System.import('tests/default1').then(function(_m1) {
+          })['catch'](err);
+          System['import']('tests/default1').then(function(_m1) {
             if (m1 === undefined)
               m1 = null;
             else
               m1 = _m1;
             checkComplete();
-          });
-          System.import('tests/default2').then(function(_m2) {
+          })['catch'](err);
+          System['import']('tests/default2').then(function(_m2) {
             m2 = _m2;
             checkComplete();
-          });
-          System.import('tests/asdf').then(function() {
+          })['catch'](err);
+          System['import']('tests/asdf').then(function() {
           }, function(_err) {
             err = _err;
             checkComplete();
-          });
-          System.import('tests/default3').then(function(_m3) {
+          })['catch'](err);
+          System['import']('tests/default3').then(function(_m3) {
             m3 = _m3;
             checkComplete();
-          });
-          System.import('tests/module').then(function(_m4) {
+          })['catch'](err);
+          System['import']('tests/module').then(function(_m4) {
             m4 = _m4;
             checkComplete();
-          });
+          })['catch'](err);
         },
         confirm: function(m1, m2, m3, m4) {
-          if (m1.default != 'default1')
+          if (m1['default'] != 'default1')
             return 'Error defining default 1';
-          if (m2.default != 'default2')
+          if (m2['default'] != 'default2')
             return 'Error defining default 2';
-          if (m3.default != 'default3')
+          if (m3['default'] != 'default3')
             return 'Error defining default 3';
           if (m4.test != 'default3')
             return 'Error defining module';
@@ -75,8 +75,8 @@
         name: 'Importing a mapped loaded module',
         run: function(complete, err) {
           System.map['default1'] = 'tests/default1';
-          System.import('default1').then(function() {
-            System.import('default1').then(complete, err);
+          System['import']('default1').then(function() {
+            System['import']('default1').then(complete, err);
           }, err);
         },
         confirm: function(m) {
@@ -87,7 +87,7 @@
       {
         name: 'Error handling',
         run: function(complete, err) {
-          System.import('tests/error').then(complete, err);
+          System['import']('tests/error').then(complete, err);
         },
         confirm: function() {
           return;
@@ -96,7 +96,7 @@
       {
         name: 'Global script loading',
         run: function(complete, err) {
-          System.import('tests/global').then(complete, err);
+          System['import']('tests/global').then(complete, err);
         },
         confirm: function(m) {
           if (!m.jQuery || !m.another)
@@ -106,7 +106,7 @@
       {
         name: 'Global script with multiple objects the same',
         run: function(complete, err) {
-          System.import('tests/global-multi').then(complete, err);
+          System['import']('tests/global-multi').then(complete, err);
         },
         confirm: function(m) {
           if (m.jquery != 'here')
@@ -116,7 +116,7 @@
       {
         name: 'Global script loading with inline shim',
         run: function(complete, err) {
-          System.import('tests/global-inline-dep').then(complete, err);
+          System['import']('tests/global-inline-dep').then(complete, err);
         },
         confirm: function(m) {
           if (m != '1.8.3')
@@ -126,7 +126,7 @@
       {
         name: 'Global script with inline exports',
         run: function(complete, err) {
-          System.import('tests/global-inline-export').then(complete, err);
+          System['import']('tests/global-inline-export').then(complete, err);
         },
         confirm: function(m) {
           if (m != 'r')
@@ -137,7 +137,7 @@
         name: 'Global script with shim config',
         run: function(complete, err) {
           System.shim['tests/global-shim-config'] = ['./global-shim-config-dep'];
-          System.import('tests/global-shim-config').then(complete, err);
+          System['import']('tests/global-shim-config').then(complete, err);
         },
         confirm: function(m) {
           if (m != 'shimmed')
@@ -148,7 +148,7 @@
         name: 'Global script loading that detects as AMD with shim config',
         run: function(complete, err) {
           System.shim['tests/global-shim-amd'] = true;
-          System.import('tests/global-shim-amd').then(complete, err);
+          System['import']('tests/global-shim-amd').then(complete, err);
         },
         confirm: function(m) {
           if (m != 'global')
@@ -158,7 +158,7 @@
       {
         name: 'Support the empty module',
         run: function(complete, err) {
-          System.import('@empty').then(complete, err);
+          System['import']('@empty').then(complete, err);
         },
         confirm: function(m) {
           if (!m)
@@ -169,7 +169,7 @@
         name: 'Global script with shim config exports',
         run: function(complete, err) {
           System.shim['tests/global-shim-config-exports'] = { exports: 'p' };
-          System.import('tests/global-shim-config-exports').then(complete, err);
+          System['import']('tests/global-shim-config-exports').then(complete, err);
         },
         confirm: function(m) {
           if (m != 'export')
@@ -180,7 +180,7 @@
         name: 'Map configuration',
         run: function(complete, err) {
           System.map['maptest'] = 'tests/map-test';
-          System.import('maptest').then(complete, err)
+          System['import']('maptest').then(complete, err)
         },
         confirm: function(m) {
           if (m.maptest != 'maptest')
@@ -190,7 +190,7 @@
       {
         name: 'Map configuration subpath',
         run: function(complete, err) {
-          System.import('maptest/sub').then(complete, err)
+          System['import']('maptest/sub').then(complete, err)
         },
         confirm: function(m) {
           if (m.maptest != 'maptestsub')
@@ -203,7 +203,7 @@
           System.map['tests/contextual-map'] = {
             maptest: 'tests/contextual-map-dep'
           };
-          System.import('tests/contextual-map').then(complete, err);
+          System['import']('tests/contextual-map').then(complete, err);
         },
         confirm: function(m) {
           if (m.mapdep != 'mapdep')
@@ -216,7 +216,7 @@
           System.map['tests/subcontextual-map'] = {
             dep: 'tests/subcontextual-mapdep'
           };
-          System.import('tests/subcontextual-map/submodule').then(complete, err);
+          System['import']('tests/subcontextual-map/submodule').then(complete, err);
         },
         confirm: function(m) {
           if (m != 'submapdep')
@@ -232,7 +232,7 @@
           System.map['tests/shim-map-test'] = {
             'shim-map-dep': 'tests/shim-map-test-dep'
           };
-          System.import('tests/shim-map-test').then(complete, err);
+          System['import']('tests/shim-map-test').then(complete, err);
         },
         confirm: function(m) {
           if (m != 'depvalue')
@@ -242,7 +242,7 @@
       {
         name: 'Loading an AMD module',
         run: function(complete, err) {
-          System.import('tests/amd-module').then(complete, err);
+          System['import']('tests/amd-module').then(complete, err);
         },
         confirm: function(m) {
           if (m.amd != true)
@@ -254,7 +254,7 @@
       {
         name: 'Loading an AMD named define',
         run: function(complete, err) {
-          System.import('tests/nameddefine').then(complete, err);
+          System['import']('tests/nameddefine').then(complete, err);
         },
         confirm: function(m1, m2) {
           if (!m1.converter)
@@ -264,7 +264,7 @@
       {
         name: 'Loading AMD CommonJS form',
         run: function(complete, err) {
-          System.import('tests/amd-cjs-module').then(complete, err);
+          System['import']('tests/amd-cjs-module').then(complete, err);
         },
         confirm: function(m) {
           if (m.test != 'hi')
@@ -274,7 +274,7 @@
       {
         name: 'Loading a CommonJS module',
         run: function(complete, err) {
-          System.import('tests/common-js-module').then(complete, err);
+          System['import']('tests/common-js-module').then(complete, err);
         },
         confirm: function(m) {
           if (m.hello != 'world')
@@ -286,7 +286,7 @@
       {
         name: 'Loading a UMD module',
         run: function(complete, err) {
-          System.import('tests/umd').then(complete, err);
+          System['import']('tests/umd').then(complete, err);
         },
         confirm: function(m) {
           if (m.d != 'hi')
@@ -296,7 +296,7 @@
       {
         name: 'Loading ES6 with format hint',
         run: function(complete, err) {
-          System.import('tests/es6-format').then(complete, err);
+          System['import']('tests/es6-format').then(complete, err);
         },
         confirm: function(m) {
         }
@@ -304,7 +304,7 @@
       {
         name: 'Loading AMD with format hint',
         run: function(complete, err) {
-          System.import('tests/amd-format').then(complete, err);
+          System['import']('tests/amd-format').then(complete, err);
         },
         confirm: function(m) {
           if (m.amd != 'amd')
@@ -314,7 +314,7 @@
       {
         name: 'Loading CJS with format hint',
         run: function(complete, err) {
-          System.import('tests/cjs-format').then(complete, err);
+          System['import']('tests/cjs-format').then(complete, err);
         },
         confirm: function(m) {
           if (m.cjs != 'cjs')
@@ -324,7 +324,7 @@
       {
         name: 'Module Name meta',
         run: function(complete, err) {
-          System.import('tests/reflection').then(complete, err);
+          System['import']('tests/reflection').then(complete, err);
         },
         confirm: function(m) {
           if (m.myname != 'tests/reflection')
@@ -334,7 +334,7 @@
       {
         name: 'Relative dyanamic loading',
         run: function(complete, err) {
-          System.import('tests/reldynamic').then(function(m) {
+          System['import']('tests/reldynamic').then(function(m) {
             m.dynamicLoad().then(complete, err);
           }, err);
         },
@@ -347,7 +347,7 @@
         name: 'Versions support',
         run: function(complete, err) {
           System.versions['tests/versioned'] = '2.0.3';
-          System.import('tests/versioned@^2.0.3').then(complete, err);
+          System['import']('tests/versioned@^2.0.3').then(complete, err);
         },
         confirm: function(m) {
           if (m.version != '2.3.4')
@@ -358,7 +358,7 @@
         name: 'Simple compiler Plugin',
         run: function(complete, err) {
           System.map['coffee'] = 'tests/compiler-plugin';
-          System.import('tests/compiler-test.coffee!').then(complete, err);
+          System['import']('tests/compiler-test.coffee!').then(complete, err);
         },
         confirm: function(m) {
           if (m.output != 'plugin output')
@@ -372,7 +372,7 @@
         run: function(complete, err) {
           System.map['pluginrequest'] = 'tests/compiled.coffee!';
           System.map['coffee'] = 'tests/compiler-plugin';
-          System.import('pluginrequest').then(complete, err);
+          System['import']('pluginrequest').then(complete, err);
         },
         confirm: function(m) {
           if (m.extra != 'yay!')
@@ -384,7 +384,7 @@
         run: function(complete, err) {
           System.map['bootstrap'] = 'tests/bootstrap@^3.1.1';
           System.versions['tests/bootstrap'] = '3.1.1';
-          System.import('bootstrap/test.coffee!coffee').then(complete, err);
+          System['import']('bootstrap/test.coffee!coffee').then(complete, err);
         },
         confirm: function(m) {
           if (m.extra != 'yay!')
@@ -394,10 +394,10 @@
       {
         name: 'Legacy plugin',
         run: function(complete, err) {
-          System.import('tests/default1.js!tests/legacy-plugin').then(complete, err);
+          System['import']('tests/default1.js!tests/legacy-plugin').then(complete, err);
         },
         confirm: function(m) {
-          if (!m.default)
+          if (!m['default'])
             return 'No Default';
           if (!m.plugin)
             return 'Not transpiled';
@@ -406,7 +406,7 @@
       {
         name: 'Advanced compiler plugin',
         run: function(complete, err) {
-          System.import('tests/compiler-test!tests/advanced-plugin').then(complete, err);
+          System['import']('tests/compiler-test!tests/advanced-plugin').then(complete, err);
         },
         confirm: function(m) {
           if (m != 'custom fetch:tests/compiler-test!tests/advanced-plugin')
@@ -417,7 +417,7 @@
         name: 'Loading from jspm',
         run: function(complete, err) {
           System.paths['npm:*'] = 'https://npm.jspm.io/*.js';
-          System.import('npm:underscore').then(complete, err);
+          System['import']('npm:underscore').then(complete, err);
         },
         confirm: function(m) {
           if (typeof m.chain != 'function')
