fixes amd bundled named defines

--- a/test/test.html
+++ b/test/test.html
@@ -182,11 +182,20 @@
       {
         name: 'Loading an AMD named define',
         run: function(complete, err) {
-          System['import']('tests/nameddefine').then(complete, err);
+          System['import']('tests/nameddefine').then(function(m1){
+          	if (!m1.converter) {
+          		err( 'Showdown not loaded!' );
+          	} else {
+          		System['import']('another-define').then(complete, err)
+          	}
+           	 
+          }, err);
         },
-        confirm: function(m1, m2) {
-          if (!m1.converter)
-            return 'Showdown not loaded!';
+        confirm: function(m) {
+          if (m.named !== "define") {
+          	return 'Another module is not defined';
+          }
+            
         }
       },
       {
