--- a/test/test.html
+++ b/test/test.html
@@ -18,8 +18,10 @@
 		<script>
 			QUnit.config.autostart = false;
 		</script>
-		<script src="../dist/system.js" data-traceur-src="../bower_components/traceur/traceur.js" data-main='test' type="text/javascript"></script>
-
+		<script src="../dist/system.js" data-traceur-src="../bower_components/traceur/traceur.js" type="text/javascript"></script>
+		<script>
+			System.import('test')
+		</script>
 		
 		
 	</body>
