first test pass

--- a/test/test.html
+++ b/test/test.html
@@ -13,6 +13,7 @@
 		<ol id="qunit-tests"></ol>
 		<div id="qunit-test-area"></div>
 
+		<!-- <script src="../bower_components/traceur/traceur.js"></script> -->
 		<script src="../bower_components/es6-module-loader/dist/es6-module-loader.js"></script>
 		<script src="../dist/system.js" data-traceur-src="../bower_components/traceur/traceur.js" data-main="test" type="text/javascript"></script>
 
